--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,74 @@
-version: 2
-updates:
-  - package-ecosystem: npm
-    directory: /
-    schedule:
-      interval: weekly
-      day: sunday
-      time: "01:00"
+name: Deploy ui dosc site with PM2
+
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies and compile project
+        run: |
+          npm ci --force
+          npm run build
+
+      - name: Build deployment package (excluding node_modules and other directories)
+        run: |
+          tar -cvf source.tar \
+          --exclude='tsconfig.json' .
+          gzip source.tar
+
+      - name: SSH to server and clear
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASSWD }}
+          script: |
+            # 创建目标部署目录（如果不存在）
+            mkdir -p /apps/excalidraw-room-app
+
+            #
+            chmod 755 /apps/excalidraw-room-app
+
+            # 切换到部署目录
+            cd /apps/excalidraw-room-app
+
+            # 清理当前目录下所有文件及子目录
+            rm -rf ./*
+
+      - name: Upload deployment package
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASSWD }}
+          source: source.tar.gz
+          target: /apps/excalidraw-room-app
+
+      - name: SSH to server and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          password: ${{ secrets.SERVER_PASSWD }}
+          script: |
+            # 切换到部署目录
+            cd /apps/excalidraw-room-app
+
+
+            # 解压新部署包
+            tar -xzvf source.tar.gz
+
+            # 清理临时文件（此时已无须单独删除旧版本文件）
+            rm source.tar.gz
+
+            # 启动新的服务
+            pm2 list | grep 'excalidraw-room-app' && pm2 stop excalidraw-room-app  && pm2 delete excalidraw-room-app || echo "No existing service found"
+            pm2 start ecosystem.config.js
