feat: 修改编译文件

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "fix:other": "yarn prettier --write",
     "fix": "yarn fix:other && yarn fix:code",
     "prettier": "prettier . --ignore-path=.gitignore",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "start:dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "test:code": "eslint --ext .ts .",
     "test:other": "yarn prettier --list-different",
